Registered DbCotext in services container

--- a/CarRental.Web/CarRental.Web.csproj
+++ b/CarRental.Web/CarRental.Web.csproj
@@ -12,11 +12,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CarRental.Core\CarRental.Core.csproj" />
+    <ProjectReference Include="..\CarRental.Infrastructure\CarRental.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Application\Controllers\" />
-    <Folder Include="Application\Configuration\" />
   </ItemGroup>
 
 </Project>
