--- a/CarRental.Web/appsettings.Development.json
+++ b/CarRental.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CarRentalPostgreSQL": "Host=localhost;Database=postgres;Username=postgres;Password=abcd1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
