--- a/test/CarRental.Infrastructure.Test/CarRental.Infrastructure.Test.csproj
+++ b/test/CarRental.Infrastructure.Test/CarRental.Infrastructure.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\CarRental.Core\CarRental.Core.csproj" />
+    <ProjectReference Include="..\..\src\CarRental.Infrastructure\CarRental.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
