Added Serilog configuration

--- a/src/CarRental.Web/appsettings.Development.json
+++ b/src/CarRental.Web/appsettings.Development.json
@@ -2,10 +2,22 @@
   "ConnectionStrings": {
     "CarRentalPostgreSQL": "Host=localhost;Database=postgres;Username=postgres;Password=abcd1234"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Graylog" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Graylog",
+        "Args": {
+          "hostNameOrAddress": "localhost",
+          "port": "12201",
+          "transportType": "Udp"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
