Delegate handler in service

--- a/src/CarRental.Infrastructure/CarRental.Infrastructure.csproj
+++ b/src/CarRental.Infrastructure/CarRental.Infrastructure.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Business\Handlers\Commands\" />
     <Folder Include="Data\Models\" />
   </ItemGroup>
 
